2012-03-16	Stephan Linz <linz@li-pro.net>

	* common: stay on glib-2.28.8 (from ptxdist-2011.12.0)

2012-03-14	Stephan Linz <linz@li-pro.net>

	* common: HOWTO: add description for Xilinx-ML605-AXI-full-13.2

2012-02-19	Stephan Linz <linz@li-pro.net>

	* common: supports AXI systems by the build_all.mk make script

2012-02-18	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to u-boot-2011.12

2012-02-12	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to gdb-7.2 (native debugging)

2011-12-26	Stephan Linz <linz@li-pro.net>

	* common: remove patch sets for obsolete u-boot-2011.09
	* common: upgarde patch sets to u-boot-2011.12

2011-12-20	Stephan Linz <linz@li-pro.net>

	* common: HOWTO: add reference note to the right GNU toolchain
	* common: remove rules artefacts of host-glib
	* common: remove patch sets for obsolete u-boot-2011.06
	* common: remove patch sets for obsolete u-boot-2011.03
	* common: remove patch sets for obsolete u-boot-2010.12-rc1
	* common: remove patch sets for obsolete u-boot-2010.06

2011-12-18	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-2.6.37.6
	* ptxconfig: include and enable new local source iwatcher-trunk
	* ptxconfig: include and enable new local source
		     gcc_extract_insn_test-trunk

2011-12-17	Stephan Linz <linz@li-pro.net>

	* common: remove patch sets for obsolete packages dbus-1.2.24,
		  glib-2.22.2, and glib-2.25.10

2011-12-11	Stephan Linz <linz@li-pro.net>

	* common: HOWTO: add reference note to the right GNU toolchain
	* ptxconfig: enable glibmm

2011-12-10	Stephan Linz <linz@li-pro.net>

	* common: remove dbus-glib-0.82 (from ptxdist-2010.08.0) and upgrade
		  to default version from global ptxdist rule set
	* common: remove dbus-1.2.24 (from ptxdist-2010.08.0) and upgrade
		  to default version from global ptxdist rule set
	* common: remove glib-2.22.1 (from ptxdist-2010.08.0) and upgrade
		  to default version from global ptxdist rule set
