@@ -1,5 +1,6 @@
 2012-03-16	Stephan Linz <linz@li-pro.net>
 
+	* common: stay on glibmm-2.22.1 (from ptxdist-2011.12.0)
 	* common: stay on glib-2.28.8 (from ptxdist-2011.12.0)
 
 2012-03-14	Stephan Linz <linz@li-pro.net>
